--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
+body{
+    background-image: linear-gradient(to bottom right, purple, blue);
+    background-repeat: no-repeat;
+    margin:0px;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
 h1 {
-    color:black;
+    color:rgb(255, 255, 255);
     font-family: "Dokdo", cursive;
-    font-size: 64px;
+}
+
+nav{
+    display:flex;
+    width: 100%;
+    border-bottom: 1px solid rgb(255, 86, 182)
+}
+nav > .top-header {
+    padding: 3rem 2rem;
+    display:flex;
+    gap: 1rem;
+    border-left:1px solid rgb(255, 86, 182)
 }
