--- a/normalize.css
+++ b/normalize.css
@@ -38,13 +38,20 @@ nav{
     font-size: 32px;
 }
 
+a:hover{
+    color:#7A7369;
+    text-decoration: underline;
+}
+
 #logo{
+    text-decoration: none;
     justify-content: flex-start;
     font-size: 64px;
+    white-space: nowrap;
 }
 
 #logo, #link{
-    flex-basis: 35%;
+    flex-basis: calc()
 }
 
 #social{
@@ -55,5 +62,18 @@ nav{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width:40%;
+    width:30%;
+}
+
+.paragraph{
+    border-radius: 10px;
+    border-style: solid;
+    border-color: #3B3732;
+    height:80%;
+    width: 40%;
+    padding-left: 1rem;
+    margin-left: 2vw;
+    margin-top: 1vw;
+    margin-right: 2vw;
+    background-color: #7A7369
 }
