--- a/style.css
+++ b/style.css
@@ -21,17 +21,17 @@ a:hover{
     top: 0;
     width: 100%;
     opacity: 0.95;
-    z-index: 999;
   }
 
 .sticky + nav {
-    padding-top: 60px;
+    padding-top: 30px;
   }
-
+  
 *{
     box-sizing: border-box;
     text-decoration: none;
     font-weight: 400;
+    margin: 0   ;
 }
 
 nav{
@@ -138,4 +138,42 @@ nav{
     padding: 2rem;
     text-align: center;
     color: black;
+}
+
+.merchDisplay {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-color: antiquewhite;
+    grid-gap: 2vw;
+    padding: 2vw;
+    text-align: center;
+    width: 100%;
+}
+
+.merchDisplay div {
+    text-align: center;
+    background:whitesmoke;
+    width:30.7vw;
+    height:30.7vw;
+}
+
+.merchDisplay div:hover {
+    transition: 0.5s;
+    transform: scale(1.05);
+}
+#buttonTop {
+    display: block;
+    margin: 0 auto;
+    border: none;
+    cursor:pointer;
+    background-color: #BEE5FA;
+    color: whitesmoke;
+    padding:1rem;
+    font-size: 1.5vw;
+}
+
+.merch1 > img {
+    top:20px;
+    width: 18vw;
+    height: 24vw;
 }
