--- a/normalize.css
+++ b/normalize.css
@@ -71,8 +71,9 @@ nav{
 #BandPlay{
     display: block;
     margin: 0 auto;
+    padding: 3em 0;
     width:100%;
-    height:40vh
+    height:56%
 }
 
 .iframeWrap {
@@ -114,12 +115,14 @@ iframe {
     width: 48%;
     height: 27%; 
 }
+
 .tourHead {
-    padding: 1rem 10rem;
+    padding: 4rem 10rem;
     font-family: 'Sono', sans-serif;
     font-size: 1.5rem;    
     background: #BEE5FA;
 }
+
 .tourRow {
     display: flex;    
     justify-content: space-between;
@@ -127,11 +130,16 @@ iframe {
     height: 10vh;
     margin-bottom: 2rem;
     align-items: center;
-    padding: 0 4rem;
 }
 
-.country {
-    align-self: center;
+.country, .venue, .date, .ticket{
+    flex-basis: calc(100%/3);
+    padding: 1rem;
+    font-weight: bold;
+}
+
+.ticket {
+    text-align:center;
 }
 
 #ticketButton {
@@ -192,4 +200,3 @@ input[type=submit]:hover {
     text-align: center;
     color: white;
 }
-
