--- a/styles/style.css
+++ b/styles/style.css
@@ -70,14 +70,14 @@ nav{
     width: 100%;
     height: 50%;
 }
-
+/* Styling of image */
 .image {
     height:100%;
     width:50%;
     background:no-repeat;
     background-position: center;
 }
-
+/* Styling of text */
 .text {
     background: white;
     display:flex;
@@ -100,7 +100,7 @@ nav{
     line-height: 1.5em;
     padding:1em;
 }
-
+/* Each members designated font */
 #Sebastian {
     font-family: 'Nova Mono', monospace;
 }
@@ -140,7 +140,7 @@ nav{
     text-align: center;
     color: black;
 }
-
+/* Making of grid for the merchandise */
 .merchDisplay {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -154,7 +154,7 @@ nav{
     width:30.7vw;
     height:30.7vw;
 }
-
+/* Animation on hover of product */
 .merchDisplay div:hover {
     transition: 0.5s;
     transform: scale(1.05);
@@ -176,7 +176,7 @@ img {
     width: 18vw;
     height: 24vw;
 }
-
+/* Code to allow the viewing of a shirt from front and back */
 .merch3:hover .shirtFront {
     display: none;
 }
@@ -188,7 +188,7 @@ img {
 .merch3:hover .shirtBack {
     display: inline;
 }
-
+/* For large phone screen and smaller */
 @media screen and (max-width:980px) {
     .profile {
         height:25%;
